test(js): js for toggle
testing if js for toggle works

closed

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -128,6 +128,22 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "5c62c7ea": {
+          "id": "5c62c7ea",
+          "path": "js/push-menu.js",
+          "output": "js/push-menu-dist.js",
+          "name": "push-menu.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
