feat(html): images
plug images into html

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -15,7 +15,7 @@
           "output": "css/components/_main.css",
           "name": "_main.scss",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -27,7 +27,8 @@
           "parents": [
             "7e70da7e"
           ],
-          "type": "sass"
+          "type": "sass",
+          "forceImportAutoCompile": true
         },
         "2e8f9ea2": {
           "id": "2e8f9ea2",
@@ -144,6 +145,19 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "784f8966": {
+          "id": "784f8966",
+          "path": "images/american-flag-with-puppy.jpg",
+          "output": "images/american-flag-with-puppy.jpg",
+          "name": "american-flag-with-puppy.jpg",
+          "category": "IMAGE",
+          "size": 158936,
+          "type": "jpg",
+          "initialSize": 158936,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
